A bit of localization

--- a/app/src/main/res/layout/activity_get__flight__ticket.xml
+++ b/app/src/main/res/layout/activity_get__flight__ticket.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="136dp"
         android:background="@drawable/rounded_buttons"
-        android:text="GO"
+        android:text="ПОИСК"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:ems="10"
-        android:hint="Enter Booking ID"
+        android:hint="Введите номер заказа"
         android:inputType="numberSigned"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:ems="10"
-        android:hint="Enter Name"
+        android:hint="Введите имя"
         android:inputType="textCapWords|textCapCharacters"
         android:textAlignment="center"
         android:textColor="#000000"
