--- a/app/src/main/res/layout/activity_delete__flight.xml
+++ b/app/src/main/res/layout/activity_delete__flight.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="Enter The Flight Number"
+        android:hint="Введите номер рейса"
         android:inputType="numberSigned"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -29,7 +29,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="40dp"
         android:ems="10"
-        android:hint="Day"
+        android:hint="День"
         android:inputType="numberSigned|number"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -44,7 +44,7 @@
         android:layout_marginStart="128dp"
         android:layout_marginTop="40dp"
         android:ems="10"
-        android:hint="Month"
+        android:hint="Месяц"
         android:inputType="numberSigned"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -59,7 +59,7 @@
         android:layout_marginStart="232dp"
         android:layout_marginTop="40dp"
         android:ems="10"
-        android:hint="Year"
+        android:hint="Год"
         android:inputType="numberSigned"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -73,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:background="@drawable/rounded_buttons"
-        android:text=" Delete Flight "
+        android:text="Удалить рейс"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
