--- a/app/src/main/res/layout/activity_delete__flight__ticket.xml
+++ b/app/src/main/res/layout/activity_delete__flight__ticket.xml
@@ -13,7 +13,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="Enter The Booking Id Number"
+        android:hint="Введите номер заказа"
         android:inputType="numberSigned"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -28,7 +28,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
         android:ems="10"
-        android:hint="Enter Your Name"
+        android:hint="Введите ваше имя"
         android:inputType="textCapWords|textCapCharacters"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:background="@drawable/rounded_buttons"
-        android:text=" Delete Ticket "
+        android:text="Удалить билет"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
