--- a/app/src/main/res/layout/activity_passenger__info.xml
+++ b/app/src/main/res/layout/activity_passenger__info.xml
@@ -13,7 +13,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="80dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="Имя"
         android:inputType="textPersonName|textCapWords|textCapCharacters"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -28,7 +28,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="44dp"
         android:ems="10"
-        android:hint="Age"
+        android:hint="Возраст"
         android:inputType="number"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -43,7 +43,7 @@
         android:layout_height="52dp"
         android:layout_marginTop="44dp"
         android:ems="10"
-        android:hint="Gender (M or F or O) O for others"
+        android:hint="Пол (M или F или O) O для других"
         android:inputType="textCapWords|textCapCharacters"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
         android:background="@drawable/rounded_buttons"
-        android:text="Next"
+        android:text="Далее"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
