--- a/app/src/main/res/layout/activity_seat_selection.xml
+++ b/app/src/main/res/layout/activity_seat_selection.xml
@@ -24,7 +24,7 @@
         android:layout_height="58dp"
         android:layout_marginTop="36dp"
         android:ems="10"
-        android:hint="Enter The Seat Number Here"
+        android:hint="Введите номер места"
         android:inputType="numberSigned"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:background="@drawable/rounded_buttons"
-        android:text=" Proceed To Pay "
+        android:text="Забронировать "
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
