--- a/app/src/main/res/layout/activity_selection__of__flight.xml
+++ b/app/src/main/res/layout/activity_selection__of__flight.xml
@@ -26,7 +26,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="28dp"
         android:ems="10"
-        android:hint="Enter The Serial Number Of Flight"
+        android:hint="Введите номер самолета"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColorHint="#000000"
@@ -41,7 +41,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/rounded_buttons"
-        android:text="NEXT"
+        android:text="Далее"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
